tests/fail/17_char_empty.lang
функция main(): целое {
  символ empty = '';
  вернуть 0;
}
